added darker markers, sighting/preview endpoint, api call to get markers on the map, simplified components, updated swagger.json
